[B]Version 0.2.2[/B]
    * Removed obsolete (=all) filehoster: hotfile.com, filesonic.com, fileserve.com, upfile.in & wupload.com
    * New supported filehoster: turbobit.net & extabit.com

[B]Version 0.2.1[/B]
    * Ignore duplicate filehoster links

[B]Version 0.2.0[/B]
    * Refactoring (Using now the library DDLScraper)
    * Added search function
    * Fixed problem with posts, that have no image. Sometimes XBMC didn't react anymore
    * New supported filehoster: upfile.in, wupload.com
    * Fixed problems with the new website design

[B]Version 0.1.2[/B]
    * Fixed problems with scraping category 'All' and specific movies
    * Changed plugin logo, due to the new website design
    * Show progress dialog while fetching posts
    * Added new setting to hide all subcategories
    * Fixed problem with 'refused connection' due to multiple fetches

[B]Version 0.1.1[/B]
    * Fixed problems with the new website design

[B]Version 0.1.0[/B]
    * Initial release